--- a/4 - app/index.html
+++ b/4 - app/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Ubuntu:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./media/TCash-logo-3d.png">
     <title>TCash</title>
 </head>
 
@@ -150,7 +151,7 @@
         </svg>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="" id="selected">Home</a></li>
                 <li><a href="./blockchain.html">Blockchain</a></li>
                 <ul>
                     <li><a href="./about.html">About</a></li>
@@ -161,34 +162,37 @@
         </nav>
     </header>
     <main>
-        <section class="home">
-            <div class="cripto">
+        <section class="cabecera">
+            <div>
                 <h1>Bitcoin</h1>
                 <p>Bitcoin​ es una moneda digital descentralizada y un sistema de pago​​ sin banco central o
                     administrador único</p>
             </div>
-            <img src="./media/bitcoin-logo-3d.png" alt="">
+            <img src="./media/bitcoin-logo-3d.png" alt="Logo de bitcoin en 3d">
         </section>
         <section class="more">
             <h2>Mas información</h2>
             <div>
-                <img src="./media/bitcoin coin.png" alt="">
-                <p>La criptomoneda fue concebida en el año 2008 por una persona o grupo de personas bajo el seudónimo de
-                    Satoshi Nakamoto,​ cuya identidad concreta se desconoce.​ En el 2009 se presenta su implementación
-                    como código libre y la red entre iguales comienza a funcionar.
-                </p>
+                <img src="./media/bitcoin coin.png" alt="Moneda bitcoin">
+                <div>
+                    <p>La criptomoneda fue concebida en el año 2008 por una persona o grupo de personas bajo el seudónimo de
+                        Satoshi Nakamoto,​ cuya identidad concreta se desconoce.​ En el 2009 se presenta su implementación
+                        como código libre y la red entre iguales comienza a funcionar.
+                    </p>
+                    <br>
+                    <p>Se han planteado críticas sobre el elevado uso de electricidad del proceso de minería, uso en comercio
+                        ilícito y pagos de extorsiones, la pérdida de la descentralización conforme incrementa la dificultad de
+                        minado, estafas que se aprovechan de nuevos usuarios interesados en adquirir bitcoins, así como la
+                        creciente especulación financiera en comparación con su uso como moneda corriente. Al tratarse de un
+                        fenómeno financiero inédito, las opiniones de los economistas sobre las criptomonedas varían enormemente
+                        en cuanto a su verdadero valor y estabilidad a largo plazo.</p>
+                </div>
             </div>
-            <p>Se han planteado críticas sobre el elevado uso de electricidad del proceso de minería, uso en comercio
-                ilícito y pagos de extorsiones, la pérdida de la descentralización conforme incrementa la dificultad de
-                minado, estafas que se aprovechan de nuevos usuarios interesados en adquirir bitcoins, así como la
-                creciente especulación financiera en comparación con su uso como moneda corriente. Al tratarse de un
-                fenómeno financiero inédito, las opiniones de los economistas sobre las criptomonedas varían enormemente
-                en cuanto a su verdadero valor y estabilidad a largo plazo.</p>
         </section>
     </main>
     <footer>
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            width="1000px" height="1000px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000"
+             viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000"
             xml:space="preserve">
             <g id="Capa_1">
                 <path d="M289,287h351c0,0,81,0,81,81h-27c0,0,0.193-54-54-54H316c0,0,0,54,54,54h108c0,0,81,0,81,81v270h-27c0,0-81,0-81-81V503
